--- a/package.json
+++ b/package.json
@@ -34,11 +34,14 @@
     "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
+    "@microsoft/signalr": "^10.0.0",
     "@popperjs/core": "^2.11.6",
     "axios": "^1.13.2",
     "bootstrap": "^5.3.1",
     "bootstrap-icons": "^1.10.3",
     "chart.js": "^4.5.0",
+    "html2canvas": "^1.4.1",
+    "qrcode.vue": "^3.6.0",
     "sweetalert2": "^11.26.3",
     "vue": "^3.4.25",
     "vue-router": "^4.3.2",
@@ -50,7 +53,7 @@
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/tsconfig": "^0.7.0",
     "npm-run-all": "^4.1.5",
-    "sass": "^1.75.0",
+    "sass-embedded": "^1.93.3",
     "typescript": "^5.4.5",
     "vite": "^7.1.1",
     "vue-tsc": "^3.0.5"
