--- a/package.json
+++ b/package.json
@@ -26,13 +26,13 @@
     "vue 3",
     "bootstrap 5"
   ],
-  "scripts": {
-    "dev": "vite",
-    "build": "run-p build-only",
-    "preview": "vite preview",
-    "build-only": "vite build --base=/vue-bootstrap",
-    "type-check": "vue-tsc --noEmit"
-  },
+"scripts": {
+  "dev": "vite",
+  "build": "vite build",
+  "preview": "vite preview",
+  "type-check": "vue-tsc --noEmit"
+}
+,
   "dependencies": {
     "@microsoft/signalr": "^10.0.0",
     "@popperjs/core": "^2.11.6",
