--- a/package.json
+++ b/package.json
@@ -26,16 +26,16 @@
     "vue 3",
     "bootstrap 5"
   ],
-"scripts": {
-  "dev": "vite",
-  "build": "vite build",
-  "preview": "vite preview",
-  "type-check": "vue-tsc --noEmit"
-}
-,
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "type-check": "vue-tsc --noEmit"
+  },
   "dependencies": {
     "@microsoft/signalr": "^10.0.0",
     "@popperjs/core": "^2.11.6",
+    "@vuepic/vue-datepicker": "^12.1.0",
     "axios": "^1.13.2",
     "bootstrap": "^5.3.1",
     "bootstrap-icons": "^1.10.3",
